--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,21 @@ cmake_minimum_required(VERSION 3.16)
 project(TinyHttpServer)
 set(CMAKE_CXX_STANDARD 20)
 
+set(CXX_FLAGS
+#        -fno-omit-frame-pointer
+        -Wall
+        -Wextra
+        -Werror
+        -Wconversion
+        -Wold-style-cast
+        -Woverloaded-virtual
+        -Wpointer-arith
+        -Wshadow
+        -Wwrite-strings
+        -march=native
+#        -rdynamic
+        -std=c++20)
+
 find_package(Boost)
 find_package(Threads)
 
